# VeritasCore

./: .gitignore  ACCURACY_SPEC.md  ARCHITECTURE.md  EXTENDING.md  FAQ.md  LICENSE  README.md  README.ru.md  USAGE.md  analyze_results.py  benchmark.py  benchmarks⁄realvuln_parser.py  build.sh  poisk.py  pyproject.toml  scan_realvuln.py  test_knowledge.py  test_secrets.py  test_veritas.py  veritas_core.py  veritas_knowledge.py  veritas_secrets.py  veritas_web.py
.github/workflows/: nexus.yml
extension/: README.md
extension/src/: engine.ts  extension.ts  ui.ts
hooks/: pre-commit
